1. added site plan image. removed top.jpg 2. changed job titile in about us. 3. updated email form in contact. 4. added dummy images in explore.html. 5. added meta tags for SEO in index.html

--- a/about.html
+++ b/about.html
@@ -56,50 +56,6 @@
         initMap();
     })();
 </script>
-<!--<section class="parallax parallax_3" data-url="images/parallax3.jpg">
-    <div class="container">
-        <h3>awards</h3>
-        <div class="row">
-            <div class="grid_3">
-                <div class="box2">
-                    <div class="box2_top">
-                        <span class="fa fa-star"></span>
-                    </div>
-                    <h5>Moondance International Film Festival</h5>
-                    <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curss eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestib ulum libero nisl porta vel scelerie eget mal esuada at nequeVivamus eget nibh. Etiamursus leo vel metus.</p>
-                </div>
-            </div>
-            <div class="grid_3">
-                <div class="box2">
-                    <div class="box2_top">
-                        <span class="fa fa-paw"></span>
-                    </div>
-                    <h5>Big Bear International Film Festival</h5>
-                    <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curss eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestib ulum libero nisl porta vel scelerie eget mal esuada at nequeVivamus eget nibh. Etiamursus leo vel metus.</p>
-                </div>
-            </div>
-            <div class="grid_3">
-                <div class="box2">
-                    <div class="box2_top">
-                        <span class="fa fa-trophy"></span>
-                    </div>
-                    <h5>New York International Independent Film and Video Festival</h5>
-                    <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curss eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestib ulum libero nisl porta vel.</p>
-                </div>
-            </div>
-            <div class="grid_3">
-                <div class="box2">
-                    <div class="box2_top">
-                        <span class="fa fa-video-camera"></span>
-                    </div>
-                    <h5>Premio Premi Award</h5>
-                    <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curss eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante.</p>
-                    <p>Eu lacuestib ulum libero nisl porta vel scelerie eget mal esuada at nequeVivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>-->
 <section class="well5">
     <div class="container">
         <h3>our team</h3>
@@ -125,14 +81,7 @@
                     <img src="images/chitrayan/owners/dido_som.jpg" alt="">
                     <div class="box3_cnt">
                         <h5>Sayantan Som</h5>
-                        <h6>Co-Owner</h6>
-                        <!--<p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>-->
-                        <!--<ul class="social-list2">
-                            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                            <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        </ul>-->
+                        <h6>Director of Operations</h6>
                     </div>
                 </div>
             </div>
@@ -142,61 +91,9 @@
                     <div class="box3_cnt">
                         <h5>Ashok Bhattacharya</h5>
                         <h6>General Manager</h6>
-                        <!--<p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>-->
-                        <!--<ul class="social-list2">
-                            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                            <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        </ul>-->
                     </div>
                 </div>
             </div>
-            <!--<div class="grid_3">
-                <div class="box3" data-equal-group="1">
-                    <img src="images/page-2_img05.jpg" alt="">
-                    <div class="box3_cnt">
-                        <h5>Olivia Pool</h5>
-                        <h6>Head of Production</h6>
-                        <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>
-                        <ul class="social-list2">
-                            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                            <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>-->
         </div>
     </div>
 </section>
-<!--
-<section class="bg3 color1">
-    <div class="container">
-        <h2 class="sm">testimonials</h2>
-        <div class="owl-carousel">
-            <div class="item">
-                <blockquote class="quote">
-                    <img class="quote-img" src="images/page-2_img06.jpg" alt="">
-                    <p class="quote_text">“Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt licabo. Nemo enim ipsam voluptatem...”</p>
-                    <h5>Mr. <span>Sam Kromstain</span></h5>
-                </blockquote>
-            </div>
-            <div class="item">
-                <blockquote class="quote">
-                    <img class="quote-img" src="images/page-2_img06.jpg" alt="">
-                    <p class="quote_text">“Nemo enim ipsam voluptatem. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt licabo...”</p>
-                    <h5>Mr. <span>Sam Smith</span></h5>
-                </blockquote>
-            </div>
-            <div class="item">
-                <blockquote class="quote">
-                    <img class="quote-img" src="images/page-2_img06.jpg" alt="">
-                    <p class="quote_text">“Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae . Nemo enim ipsam voluptatemab illo inventore veritatis et quasi architecto beatae vitae dicta sunt licabo...”</p>
-                    <h5>Mr. <span>Eric Kromstain</span></h5>
-                </blockquote>
-            </div>
-        </div>
-    </div>
-</section>-->
