--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta property="og:title"         content="Chitrayan Film Studio" />
     <meta property="og:description"   content="Film Studio in Kolkata" />
     <meta property="og:image"         content="images/chitrayan/logo/chitrayan.png" />
+    <meta name="description" content="A modern, fully-equipped, hi-tech shooting studio in Kolkata." />
+    <meta name="google-site-verification" content="3Z2YhqcJIlLCxwPwW6kvmr4Rf0gB72o9_Ooo9eJbSTs"/>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/camera.css">
