1. Updated privacy policy. 2. Fixed broken image links in studio.html

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                     <p class="copy">Chitrayan ©
                         <span id="copyright-year"></span>
                         <span class="dot"></span>
-                        <a href="privacy.html">Privacy Policy</a>
+                        <a class="page-link" href="privacy.html">Privacy Policy</a>
                     </p>
                 </div>
                 <div class="grid_3">
