--- a/studio.html
+++ b/studio.html
@@ -67,8 +67,8 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/4.JPG">
-                    <img src="images/chitrayan/shooting/4.JPG" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/4.jpg">
+                    <img src="images/chitrayan/shooting/4.jpg" alt="">
                     <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                 </a>
             </div>
@@ -78,8 +78,8 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/5.JPG">
-                    <img src="images/chitrayan/shooting/5.JPG" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/5.jpg">
+                    <img src="images/chitrayan/shooting/5.jpg" alt="">
                     <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                 </a>
             </div>
