--- a/privacy.html
+++ b/privacy.html
@@ -1,16 +1,62 @@
 <section class="well terms">
     <div class="container">
-        <h3>Privacy Policy</h3>
-        <h5>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium</h5>
-        <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel cur eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestibulum libero nisl porta vel sceleriue eget malesuada at nequeVivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et trices posuere cubilia Suspendisse sollicit udin velit sed leo. Ut pharetra augue nec augentum. Donec in velit vel ipsum auue. Nam elit magna. Donec porta diam eu massa. Quisque diam lorem interdum vitaapibus ac scelerisque vitae pede. Donec eget tellus non erat lacinia fermentum. Donec in velit vel ipsum auctovinar. Proin ullamcorper urna et felisstibulum iaculis lacinia est. Proin dictum elementum velit. Fusce euismod consequat ante. Lorem ipsum dolor sit met consectetuer adipiscing elit. Pellentesque sed dolor. Aliquam congue fermentum nisl. Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla venenatis. In pede mi aliquet sit amet euismod in auctor ut ligula. Aliquam dapibus tincidunt metus.</p>
-        <h5>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h5>
-        <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel cur eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestibulum libero nisl porta vel sceleriue eget malesuada at nequeVivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et trices posuere cubilia Suspendisse sollicit udin velit sed leo. Ut pharetra augue nec augentum. Donec in velit vel ipsum auue. Nam elit magna. Donec porta diam eu massa. Quisque diam lorem interdum vitaapibus ac scelerisque vitae pede. Donec eget tellus non erat lacinia fermentum. Donec in velit vel ipsum auctovinar. Proin ullamcorper urna et felisstibulum iaculis lacinia est. Proin dictum elementum velit. Fusce euismod consequat ante. Lorem ipsum dolor sit met consectetuer adipiscing elit. Pellentesque sed dolor. Aliquam congue fermentum nisl. Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla venenatis. In pede mi aliquet sit amet euismod in auctor ut ligula. Aliquam dapibus tincidunt metus. </p>
-        <h5>Vestibulum iaculis lacinia est. Proin dictum elementum velit</h5>
-        <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel cur eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestibulum libero nisl porta vel sceleriue eget malesuada at nequeVivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et trices posuere cubilia Suspendisse sollicit udin velit sed leo. Ut pharetra augue nec augentum. Donec in velit vel ipsum auue. Nam elit magna. Donec porta diam eu massa. Quisque diam lorem interdum vitaapibus ac scelerisque vitae pede. Donec eget tellus non erat lacinia fermentum. Donec in velit vel ipsum auctovinar. Proin ullamcorper urna et felisstibulum iaculis lacinia est. Proin dictum elementum velit. Fusce euismod consequat ante. Lorem ipsum dolor sit met consectetuer adipiscing elit. Pellentesque sed dolor. Aliquam congue fermentum nisl. Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla venenatis. In pede mi aliquet sit amet euismod in auctor ut ligula. Aliquam dapibus tincidunt metus. </p>
-        <h5>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis</h5>
-        <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel cur eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestibulum libero nisl porta vel sceleriue eget malesuada at nequeVivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et trices posuere cubilia Suspendisse sollicit udin velit sed leo. Ut pharetra augue nec augentum. Donec in velit vel ipsum auue. Nam elit magna. Donec porta diam eu massa. Quisque diam lorem interdum vitaapibus ac scelerisque vitae pede. Donec eget tellus non erat lacinia fermentum. Donec in velit vel ipsum auctovinar. Proin ullamcorper urna et felisstibulum iaculis lacinia est. Proin dictum elementum velit. Fusce euismod consequat ante. Lorem ipsum dolor sit met consectetuer adipiscing elit. Pellentesque sed dolor. Aliquam congue fermentum nisl. Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla venenatis. In pede mi aliquet sit amet euismod in auctor ut ligula. Aliquam dapibus tincidunt metus. </p>
-        <h5>Cum sociis natoque penatibus et magnis dis parturient</h5>
-        <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel cur eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestibulum libero nisl porta vel sceleriue eget malesuada at nequeVivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et trices posuere cubilia Suspendisse sollicit udin velit sed leo. Ut pharetra augue nec augentum. Donec in velit vel ipsum auue. Nam elit magna. Donec porta diam eu massa. Quisque diam lorem interdum vitaapibus ac scelerisque vitae pede. Donec eget tellus non erat lacinia fermentum. Donec in velit vel ipsum auctovinar. Proin ullamcorper urna et felisstibulum iaculis lacinia est. Proin dictum elementum velit. Fusce euismod consequat ante. Lorem ipsum dolor sit met consectetuer adipiscing elit. Pellentesque sed dolor. Aliquam congue fermentum nisl. Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla venenatis. In pede mi aliquet sit amet euismod in auctor ut ligula. Aliquam dapibus tincidunt metus. </p>
-        <p class="policy-link"><a class="link1" href="mailto:#">privacy@demolink.org</a></p>
+        <h3>Privacy Policy for Chitrayan Film Studio</h3>
+        <p>
+            At www.chitrayanfilmstudio.com, one of our main priorities is the privacy of our visitors.
+            This Privacy Policy document contains types of information that is collected and recorded by www.chitrayanfilmstudio.com and how we use it.
+
+            If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us through email at info@chitrayanfilmstudio.com.
+        </p>
+        <h5>Log Files</h5>
+        <p>
+            www.chitrayanfilmstudio.com follows a standard procedure of using log files. These files log visitors when they visit websites.
+            All hosting companies do this and a part of hosting services’ analytics.
+            The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks.
+            These are not linked to any information that is personally identifiable.
+            The purpose of the information is for analyzing trends, administering the site, tracking users’ movement on the website, and gathering demographic information.
+        </p>
+
+        <h5>Privacy Policies</h5>
+        <p>
+            You may consult this list to find the Privacy Policy for each of the advertising partners of www.chitrayanfilmstudio.com.
+
+            Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on www.chitrayanfilmstudio.com,
+            which are sent directly to users’ browser. They automatically receive your IP address when this occurs.
+            These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.
+
+            Note that www.chitrayanfilmstudio.com has no access to or control over these cookies that are used by third-party advertisers.
+        </p>
+
+        <h5>Third Part Privacy Policies</h5>
+        <p>
+            www.chitrayanfilmstudio.com’s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. You may find a complete list of these Privacy Policies and their links here: Privacy Policy Links.
+
+            You can choose to disable cookies through your individual browser options.
+            To know more detailed information about cookie management with specific web browsers, it can be found at the browsers’ respective websites.
+            What Are Cookies?
+        </p>
+
+        <h5>Children’s Information</h5>
+        <p>
+            Another part of our priority is adding protection for children while using the internet.
+            We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.
+
+            www.chitrayanfilmstudio.com does not knowingly collect any Personal Identifiable Information from children under the age of 13.
+            If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.
+        </p>
+
+        <h5>Online Privacy Policy Only</h5>
+        <p>
+            This privacy policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in www.chitrayanfilmstudio.com.
+            This policy is not applicable to any information collected offline or via channels other than this website.
+        </p>
+
+        <h5>Consent</h5>
+        <p>
+            By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.
+        </p>
+
+
+        <!--<p class="policy-link"><a class="link1" href="mailto:#">privacy@demolink.org</a></p>-->
     </div>
 </section>
