1. added actual images. 2. corrected spelling mistake in explore.html

--- a/explore.html
+++ b/explore.html
@@ -3,7 +3,7 @@
         <h3>Perspective view of Chitrayan</h3>
         <p>
             Enjoy the experience of Chitrayan at your home through these 3D views. You will get the exact feeling as to how spacious
-            and comfortable the premises are. With pleanty of room for car parking, multiple dressing rooms and a huge shooting floor, Chitrayan
+            and comfortable the premises are. With plenty of room for car parking, multiple dressing rooms and a huge shooting floor, Chitrayan
             awaits you with a satisfying shooting experience.
         </p>
         <br/>
@@ -22,7 +22,7 @@
             <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
         </a>
         <br/>
-        <h4 class="marg">Top View. </h4>
+        <h4 class="marg">Site Plan. </h4>
         <a data-fancybox-group="1" class="thumb" href="images/chitrayan/perspective/site_plan.jpg">
             <img src="images/chitrayan/perspective/site_plan.jpg" alt="">
             <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
