index html updated

--- a/index.html
+++ b/index.html
@@ -86,24 +86,6 @@
                     <li>
                         <a class="page-link" href="infrastructure.html">Infrastructure</a>
                     </li>
-
-                    <!--<li>
-                        <a href="services.html">Services</a>
-                        <ul style="z-index:1000;">
-                            <li>
-                                <a href="studio.html">Indoor Studio</a>
-                            </li>
-                           &lt;!&ndash; <li>
-                                <a href="#">Outdoor Shooting</a>
-                            </li>&ndash;&gt;
-                            <li>
-                                <a href="facilities.html">Facilities</a>
-                            </li>
-                            <li>
-                                <a href="infra.html">Infrastructure</a>
-                            </li>
-                        </ul>
-                    </li>-->
                     <li>
                         <a class="page-link" href="about.html">About</a>
                     </li>
@@ -113,18 +95,9 @@
                     <li>
                         <a class="page-link" href="explore.html">Explore</a>
                     </li>
-                    <!--<li>
-                        <a href="news.html">News</a>
-                    </li>
-                    <li>
-                        <a href="testimonials.html">Gallery</a>
-                    </li>-->
                     <li>
                         <a class="page-link" href="contact.html">Contact</a>
                     </li>
-                    <!--<li>
-                      <a href="contact.html">Contact</a>
-                    </li>-->
                 </ul>
             </nav>
         </div>
@@ -136,7 +109,6 @@
                             <li><span class="fa fa-map-marker"></span>KALAGACHIA, SAKHARIPOTA MAIN ROAD, P.O. THAKURPUKUR</li><br/>
                             <li></span>P.S MAHESHTALA, DIST. SOUTH 24-PARGANAS</li><br/>
                             <li><a href="callto:#"><span class="fa fa-phone"></span>+91 9830064251</a></li>
-                            <!--<li><a href="#"><span class="fa fa-child"></span>login or register</a></li>-->
                         </ul>
                     </div>
                     <div class="brand">
@@ -146,9 +118,6 @@
                         <h1 class="brand_name">
                             <a style="max-width: 900px" href="./"><img src="images/chitrayan/logo/chitrayan_small.png"></a>
                         </h1>
-                        <!--<p class="brand_slogan">
-                            A modern movie town in the heart of Kolkata
-                        </p>-->
                     </div>
                 </div>
                 <div id="camera" class="camera_wrap" onload="loadCarousel();">
@@ -178,31 +147,23 @@
                 <div class="row">
                     <div class="grid_12">
                         <h2>chitrayan!</h2>
-                        <h5>Leader in providing shooting locations for producing feature films. Ideal for movies,
-                            dramatic, comedy and reality television series, as well as, factual and lifestyle
-                            programs.</h5>
+                        <h5>AN IDEAL STUDIO FOR MAKING MOVIE AND TELEVISION PROJECT, BOTH FICTION AND NON-FICTION.</h5>
                     </div>
                 </div>
                 <div class="row">
                     <div class="row">
                         <div class="grid_6">
-                            <p>Situated very close to the city, Chitrayan Film Studio provides modern and sophisticated facilities to cater to all your needs. Conveniently located and accessible through several modes of transport, Chitrayan is proving to be the first choice of all major production houses.</p>
+                            <p>Chitrayan Film Studio, situated at a very close peaceful place to the city of Kolkata, provides all modern and sophisticated facilities to cater to all the needs of
+                            a production house in making the movies, television projects, both fiction and non-fiction, in a better arena. Easily accessible by different modes of transport, Chitrayan Film Studio
+                            is proving to be the first choice of all the production houses.</p>
                         </div>
                         <div class="grid_6">
-                            <p>A shooting floor equipped with modern technologies, power back up, dressing rooms, plenty of parking space, this studio takes care of all your concerns and provides you a hassle free environment for your shooting. One stop solution for all your shooting needs.</p>
+                            <p>With air-conditioned shooting floor equipped with all required modern amenities and latest fire fighting set-up, adequate number of air-conditioned make-up rooms with attached toilets, air-conditioned
+                            production control rooms, rooms for site production office, canteen, dormitory, glass room, common toilets for both gentlemen and ladies and huge parking space this
+                            film studio takes care of all the needs of the production houses and provides them a hustle free environment for shooting.</p>
                         </div>
                     </div>
-                    <!--<div class="row tc mt1">
-                        <div class="grid_12">
-                            <a class="btn" href="#">read more</a>
-                        </div>
-                    </div>-->
                 </div>
-                <!--<div class="row tc mt1">
-                    <div class="grid_12">
-                        <a class="btn" href="#">read more</a>
-                    </div>
-                </div>-->
             </div>
         </section>
         <section class="well1">
@@ -215,23 +176,17 @@
                                 <img src="images/chitrayan/studio/1_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
-                            <h6>Spacious air-conditioned studio.</h6>
-                           <!-- <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                                vel curs.</p>-->
-                            <!--<a class="btn" href="studio.html">read more</a>-->
+                            <!--<h6>Spacious air-conditioned studio.</h6>-->
                         </div>
                     </div>
                     <div class="grid_4 wow fadeInRight" data-wow-delay="0.2s">
                         <div class="box">
-                            <h4>MAKE-UP ROOMS</h4>
+                            <h4>MAKE-UP ROOM</h4>
                             <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/junior_makeup.jpg">
                                 <img src="images/chitrayan/facilities/junior_makeup_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
-                            <h6>Well-lit air-conditioned make-up rooms</h6>
-                            <!--<p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                                vel curs.</p>-->
-                            <!--<a class="btn" href="facilities.html">read more</a>-->
+                            <!--<h6>Well-lit air-conditioned make-up rooms</h6>-->
                         </div>
                     </div>
                     <div class="grid_4 wow fadeInRight" data-wow-delay="0.4s">
@@ -241,10 +196,7 @@
                                 <img src="images/chitrayan/facilities/pcr2_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
-                            <h6>Hi-tech production control room</h6>
-                            <!--<p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                                vel curs.</p>-->
-                            <!--<a class="btn" href="facilities.html">read more</a>-->
+                            <!--<h6>Hi-tech production control room</h6>-->
                         </div>
                     </div>
                 </div>
@@ -352,24 +304,6 @@
                 <h3>Chitrayan so far....</h3>
             </div>
             <div class="parallax parallax_2" data-url="images/chitrayan/studio/6.jpg"></div>
-            <!--<div class="container well4">
-                <div class="row">
-                    <div class="grid_6 wow fadeInLeft">
-                        <h5>Lorem ipsum dolor sit amet </h5>
-                        <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel
-                            curss eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer
-                            rutrum ante eu lacuestibulum libero nisl porta vel scelerie eget malesu.</p>
-                        <a class="btn" href="#">read more</a>
-                    </div>
-                    <div class="grid_6 wow fadeInRight">
-                        <h5>Eum libero nisl porta </h5>
-                        <p>Faucibus orci luctus et trices posuere cubilia Suspendisse sollicit udin velit sed leo. Ut
-                            pharetra aue nec augentum. Donec in velit vel ipsum auue. Nam elit magna Donec porta diam eu
-                            massa. Quisque diam lorem interdum vitaapibus ac sceleris.</p>
-                        <a class="btn" href="#">read more</a>
-                    </div>
-                </div>
-            </div>-->
         </section>
         <section class="video" data-vide-bg="video/video">
             <div class="container vide_content color1">
@@ -382,20 +316,6 @@
                             </a>
                         </div>
                     </div>
-                    <!--<div class="grid_3">
-                        <div class="box2">
-                            <a href="#" class="box2_top">
-                                <div class="counter">01</div>
-                                <h3>dvd</h3>
-                            </a>
-                            <h5><a href="#">Lorem ipsum</a></h5>
-                            <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                                vel curss eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis.
-                                Integer rutrum ante eu lacuestib ulum libero nisl porta vel scelerie eget mal esuada at
-                                neque. Vivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi lacuestib. Aenean nec
-                                eros.</p>
-                        </div>
-                    </div>-->
                     <div class="grid_3">
                         <div class="box2">
                             <a href="#" class="box2_top">
