studio content updated

--- a/studio.html
+++ b/studio.html
@@ -1,13 +1,14 @@
 <section class="well5">
     <div class="container wow fadeInUp">
         <h3>Studio Floor</h3>
-        <h5 class="marg">A huge 120 feet by 85 feet air conditioned studio floor. </h5>
+        <h5 class="marg">A huge 120 feet by 85 feet air conditioned shooting floor. </h5>
         <p>
-            The studio floor is the actual stage on which the actions that will be recorded and viewed take place.<br/>
-            Chitrayan has kept that in mind and provided you all the space you need.<br/>
-            The studio has ample lighting.<br/>
-            Already several films and shows have been shot.<br/>
-            Thanks to the spacious floor, multiple sets can be created thus saving time and money for our customers.<br/>
+            The spacious shooting floor is acoustically treated in a proper way as per modern technology and has adequate arrangements to suspend
+             lights as per requirements of a production house.<br/>
+            Multiple sets can be constructed on this spacious floor and thus a production house can continue shooting of different scenes of a movie,
+            television project, both fiction and non-fiction, uninterruptedly minimizing the cost of production.
+            <br/>
+            Several production houses have already been benefitted using this modern shooting floor.<br/>
         </p>
         <br/>
         <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/1.jpg">
@@ -16,9 +17,9 @@
         </a>
         <h5 class="marg">Catwalk. </h5>
         <p>
-            Catwalks are used to suspend lighting instruments and microphones directed at the stage. The catwalks provide easy access for theater personnel to perform common tasks.<br/>
-            Chitrayan has taken advice of renowned structural engineers to provide you with the safest catwalk in the industry.<br/>
-            The catwalk is wide with support and railings to ensure the safety of the technicians.
+            Catwalks being the essential part of the shooting floor for movement of the technicians to suspend lights and microphones etc., directed at the
+            particular shooting spot, Chitrayan Film Studio has constructed wide catwalks with railing all through under the direct supervision of the renowned
+            structural engineers to ensure safe and easy movement.
         </p>
         <br/>
         <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/5.JPG">
@@ -40,7 +41,7 @@
                 </a>
             </div>
             <div class="grid_6">
-                <h5><a href="#">Haripada Bandwala (Bengali Film)</a></h5>
+                <h5><a href="#">Haripada Bandwala (Bengali Feature Film)</a></h5>
             </div>
         </div>
         <div class="row blog wow fadeInRight">
@@ -51,7 +52,7 @@
                 </a>
             </div>
             <div class="grid_6">
-                <h5><a href="#">Haripada Bandwala (Bengali Film)</a></h5>
+                <h5><a href="#">Haripada Bandwala (Bengali Feature Film)</a></h5>
             </div>
         </div>
         <div class="row blog wow fadeInRight">
@@ -62,7 +63,7 @@
                 </a>
             </div>
             <div class="grid_6">
-                <h5><a href="#">Haripada Bandwala (Bengali Film)</a></h5>
+                <h5><a href="#">Haripada Bandwala (Bengali Feature Film)</a></h5>
             </div>
         </div>
         <div class="row blog wow fadeInRight">
@@ -73,7 +74,7 @@
                 </a>
             </div>
             <div class="grid_6">
-                <h5><a href="#">Detective 2015 (Bengali Reality Show)</a></h5>
+                <h5><a href="#">Detective 2015 (Television Project-Non-fiction)</a></h5>
             </div>
         </div>
         <div class="row blog wow fadeInRight">
@@ -84,7 +85,7 @@
                 </a>
             </div>
             <div class="grid_6">
-                <h5><a href="#">Detective 2015 (Bengali Reality Show)</a></h5>
+                <h5><a href="#">Detective 2015 (Television Project-Non-fiction)</a></h5>
             </div>
         </div>
     </div>
