facilities content updated, infrastructure segment remived

--- a/facilities.html
+++ b/facilities.html
@@ -10,7 +10,7 @@
             </div>
             <div class="grid_6">
                 <h5><a href="#">Glass Room</a></h5>
-                <p>The glass room may be used for indoor shooting purposes. </p>
+                <p>The glass room may be used for shooting. </p>
             </div>
         </div>
         <div class="row blog wow fadeInRight">
@@ -22,10 +22,10 @@
             </div>
             <div class="grid_6">
                 <h5><a href="#">Production Control Room</a></h5>
-                <p>Two modern production control rooms for composition of your program.</p>
+                <p>One of the two modern air-conditioned production control rooms for on-line editing.</p>
             </div>
         </div>
-        <div class="row blog wow fadeInRight">
+        <!--<div class="row blog wow fadeInRight">
             <div class="grid_6">
                 <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/outdoor.jpg">
                     <img src="images/chitrayan/facilities/outdoor_preview.jpg" alt="">
@@ -36,7 +36,7 @@
                 <h5><a href="#">Outdoor</a></h5>
                 <p>The well decorated premises can be utilised for outdoor shoots as well.</p>
             </div>
-        </div>
+        </div>-->
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
                 <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/senior_makeup.jpg">
@@ -45,8 +45,8 @@
                 </a>
             </div>
             <div class="grid_6">
-                <h5><a href="#">Make-Up Room</a></h5>
-                <p>There are two individual make up rooms in the main building for senior artistes. These rooms are fully air-conditioned with beds and attached bathrooms</p>
+                <h5><a href="#">Make-Up Room for Senior Artists</a></h5>
+                <p>There are four make up rooms for senior artists. These rooms are fully furnished and air-conditioned with attached toilets.</p>
             </div>
         </div>
         <div class="row blog wow fadeInRight">
@@ -57,8 +57,8 @@
                 </a>
             </div>
             <div class="grid_6">
-                <h5><a href="#">Make-Up Room</a></h5>
-                <p>There are two general make up rooms in the main building for all artistes.</p>
+                <h5><a href="#">General Make-Up Room</a></h5>
+                <p>There are four spacious general make up rooms, fully furnished and air-conditioned with attached toilets.</p>
             </div>
         </div>
         <div class="row blog wow fadeInRight">
@@ -69,8 +69,56 @@
                 </a>
             </div>
             <div class="grid_6">
-                <h5><a href="#">Production Offices</a></h5>
-                <p>There are two production offices adjacent to the studio.</p>
+                <h5><a href="#">Production Office</a></h5>
+                <p>There are two exclusive rooms, adjacent to the shooting floor which can be used as production office and director's chamber.</p>
+            </div>
+        </div>
+        <div class="row blog wow fadeInRight">
+            <div class="grid_6">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/infra/fire.JPG">
+                    <img src="images/chitrayan/infra/fire_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
+            </div>
+            <div class="grid_6">
+                <h5><a href="#">Fire fighting setup</a></h5>
+                <p>The shooting floor is covered under fire detection and fire-fighting setup as well.</p>
+            </div>
+        </div>
+        <div class="row blog wow fadeInRight">
+            <div class="grid_6">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/infra/dormitory.JPG">
+                    <img src="images/chitrayan/infra/dormitory_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
+            </div>
+            <div class="grid_6">
+                <h5><a href="#">Dormitory</a></h5>
+                <p>Spacious dormitory can be used for different purposes of shooting.</p>
+            </div>
+        </div>
+        <div class="row blog wow fadeInRight">
+            <div class="grid_6">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/infra/canteen.JPG">
+                    <img src="images/chitrayan/infra/canteen_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
+            </div>
+            <div class="grid_6">
+                <h5><a href="#">Canteen</a></h5>
+                <p>There is a well shaped canteen.</p>
+            </div>
+        </div>
+        <div class="row blog wow fadeInRight">
+            <div class="grid_6">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/infra/parking.JPG">
+                    <img src="images/chitrayan/infra/parking_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
+            </div>
+            <div class="grid_6">
+                <h5><a href="#">Parking</a></h5>
+                <p>Wide car parking space for several cars as well as heavy vehicles, carrying different equipments and genertors.</p>
             </div>
         </div>
     </div>
